Added vertical lines between text divs

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <div class="div-1">
             <p>I was born and raised in Lancashire, in the UK, but now live on a smallholding in a very rural part of Co. Galway, Ireland.</p>
         </div>
+        <div class="div-border"></div>
         <div class="div-2">
             <p>I am very curious, and love learning new skills, which is one of the things that attracted me to learning to code.</p>
         </div>
+        <div class="div-border"></div>
         <div class="div-3">
             <p>I also love problem solving. Trying to work out why something isn't working as you wanted to, and thinking of possible ways to make it work, is so satisfying.</p>
         </div>
