Added and personalised text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+    <section id="header">
+        <h1>My name is Laura.</h1>
+    </section>
 
+    <section id="main">
+        <p>I am a web developer who loves creating beautiful and clean websites. When I'm not working, I can be found lost in a book.</p>
+    </section>
+    
+    
     <section class="wrapper">
         <div class="div-1">
             <p>I was born and raised in Lancashire, in the UK, but now live on a smallholding in a very rural part of Co. Galway, Ireland.</p>
@@ -36,6 +44,13 @@
         <div class="div-3">
             <p>I also love problem solving. Trying to work out why something isn't working as you wanted to, and thinking of possible ways to make it work, is so satisfying.</p>
         </div>
+    </section>
+
+    <section id="footer">
+        <img src="img/github.png" alt="Github logo">
+        <img src="img/twitter.png" alt="Twitter logo">
+        <img src="img/facebook.png" alt="Facebook logo">
+
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
